--- a/franchise-IaC/ansible/setup.yml
+++ b/franchise-IaC/ansible/setup.yml
@@ -1,30 +1,38 @@
 ---
-- name: Deploy Franchise API en EC2
+- name: Despliegue Franchise API en EC2 con Docker Compose v2
   hosts: web
   become: yes
 
   vars:
     project_dir: /home/ubuntu/franchise-api
+    repo_url: https://github.com/Johnki1/franchise-api.git
 
   tasks:
 
-    - name: Actualizar cache del sistema
+    - name: Actualizar caché del sistema
       apt:
         update_cache: yes
+        cache_valid_time: 3600
 
-    - name: Instalar dependencias necesarias
+    - name: Instalar dependencias base
       apt:
         name:
           - git
-          - docker.io
           - curl
+          - ca-certificates
+          - gnupg
         state: present
 
-    - name: Asegurar que Docker esté corriendo
-      service:
+    - name: Instalar Docker
+      apt:
+        name: docker.io
+        state: present
+
+    - name: Habilitar y arrancar Docker
+      systemd:
         name: docker
-        state: started
         enabled: yes
+        state: started
 
     - name: Agregar usuario ubuntu al grupo docker
       user:
@@ -32,20 +40,30 @@
         groups: docker
         append: yes
 
+    - name: Crear directorio de plugins Docker
+      file:
+        path: /usr/lib/docker/cli-plugins
+        state: directory
+        mode: '0755'
+
     - name: Instalar Docker Compose v2
       get_url:
         url: https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64
-        dest: /usr/local/bin/docker-compose
+        dest: /usr/lib/docker/cli-plugins/docker-compose
         mode: '0755'
 
-    - name: Detener contenedores existentes (si existen)
-      shell: docker compose down
-      args:
-        chdir: "{{ project_dir }}"
+    - name: Detener servicios existentes (si existen)
+      community.docker.docker_compose_v2:
+        project_src: "{{ project_dir }}"
+        state: absent
       ignore_errors: yes
 
     - name: Limpiar imágenes Docker no usadas
-      shell: docker image prune -f
+      community.docker.docker_prune:
+        images: yes
+        containers: yes
+        networks: yes
+        volumes: no
 
     - name: Eliminar directorio del proyecto antiguo
       file:
@@ -54,12 +72,13 @@
 
     - name: Clonar repositorio actualizado
       git:
-        repo: https://github.com/Johnki1/franchise-api.git
+        repo: "{{ repo_url }}"
         dest: "{{ project_dir }}"
         version: main
         force: yes
 
-    - name: Construir y levantar contenedores
-      shell: docker compose up -d --build
-      args:
-        chdir: "{{ project_dir }}"
+    - name: Construir y levantar contenedores con Docker Compose v2
+      community.docker.docker_compose_v2:
+        project_src: "{{ project_dir }}"
+        build: true
+        state: present
