--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=franchise-api
 
+spring.data.mongodb.auto-index-creation=true
+
 spring.data.mongodb.uri=mongodb://mongo:27017/franchise-db
 server.port=8080
 
